--- a/stylesheet.css
+++ b/stylesheet.css
@@ -113,3 +113,12 @@ select {
   flex-wrap: wrap;
   border: 1px solid black;
 }
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0);
+}
