--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,6 +60,7 @@ header h2 {
   border-radius: 10px;
   width: 380px;
   background: #fff;
+  position: relative;
 }
 
 .book-container h1 {
@@ -96,8 +97,8 @@ select {
 
 .book-container .close{
   position: absolute;
-  top: 25%;
-  right: 36%;
+  top: 10px;
+  right: 15px;
   font-size: 2rem;
   transform: rotate(45deg);
   cursor: pointer;
@@ -120,5 +121,8 @@ select {
   top: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
