--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,6 +20,7 @@ body {
   min-height: 100vh;
   justify-content: center;
   align-items: center;
+  font-family: 'Quicksand';
 }
 
 header {
@@ -48,9 +49,12 @@ header h2 {
   cursor: pointer;
   color: var(--light-pink);
   background: var(--pink);
-  transition: 0.5s ease;
   position: fixed;
   bottom: 5%;
+}
+
+#new-book:hover {
+  border: 2px solid var(--white);
 }
 
 .book-container {
@@ -60,6 +64,7 @@ header h2 {
   border-radius: 10px;
   width: 380px;
   background: #fff;
+  position: relative;
 }
 
 .book-container h1 {
@@ -94,10 +99,14 @@ select {
   background: var(--teal);
 }
 
-.book-container .close{
+.book-container input[type="submit"]:hover{
+  border: 1px solid var(--black);
+}
+
+.close{
   position: absolute;
-  top: 25%;
-  right: 36%;
+  top: 10px;
+  right: 15px;
   font-size: 2rem;
   transform: rotate(45deg);
   cursor: pointer;
@@ -105,6 +114,11 @@ select {
   border: none;
   background-color: inherit;
 }
+
+.close:hover {
+  transform: scale(1.2) rotate(45deg)
+}
+
 
 .bookshelf{
   display: flex;
@@ -120,5 +134,8 @@ select {
   top: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0);
+  background: rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
