--- a/stylesheet.css
+++ b/stylesheet.css
@@ -145,6 +145,7 @@ select {
 .book-card {
   display: flex;
   flex-direction: column;
+  align-items: stretch;
   padding: 15px;
   background: linear-gradient(45deg, var(--pink), var(--light-pink), var(--pink));
   opacity: 0.7;
@@ -157,4 +158,29 @@ select {
   text-align: center;
   transition: 0.5s ease;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+}
+
+.update,
+.delete-book{
+  border-radius: 10px;
+  background-color: var(--teal);
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 2px solid var(--light-blue);
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+}
+
+.update:hover,
+.delete-book:hover{
+    transform: scale(1.1);
+  }
+.book-card h2, h3{
+  border: 2px solid var(--white);
+  background-color: var(--light-pink);
+  border-radius: 10px;
+  margin: 0.75rem;
+}
+
+.book-read{
+  margin-bottom: 1.75rem;
 }
