--- a/stylesheet.css
+++ b/stylesheet.css
@@ -146,7 +146,8 @@ select {
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  padding: 15px;
+  padding: 10px;
+  overflow: auto;
   background: linear-gradient(45deg, var(--pink), var(--light-pink), var(--pink));
   opacity: 0.7;
   color: var(--black);
